--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Essenca</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../../assets/css/all.min.css">
     <style>
         * {
             box-sizing: border-box;
@@ -151,7 +151,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="Essenca_logo.png" alt="Essenca Logo" width="24" height="24">
+            <img src="../../assets/Essenca_logo.png" alt="Essenca Logo" width="24" height="24">
         </div>
         <h2>Essenca</h2>
         <a href="#" id="openOptions" class="settings-btn" title="Settings">
@@ -161,7 +161,7 @@
 
     <a href="#" id="activateAssistant" class="button">
         <span class="button-icon">
-            <img src="Essenca_logo.png" alt="Essenca Logo" width="16" height="16">
+            <img src="../../assets/Essenca_logo.png" alt="Essenca Logo" width="16" height="16">
         </span>
         Analyze Current Page
     </a>
@@ -179,7 +179,7 @@
         Essenca &bull; v1.1.0
     </div>
 
-    <script src="popup.js"></script>
+    <script src="../scripts/popup.js"></script>
 </body>
 
 </html>
