--- a/src/ui/settings/options.html
+++ b/src/ui/settings/options.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Essenca Settings</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-local.css">
     <link rel="stylesheet" href="settings.css">
 </head>
 
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="../Essenca_logo.png" alt="Essenca Logo" width="32" height="32">
+                <img id="logoImg" alt="Essenca Logo" width="32" height="32">
             </div>
             <h1>Settings</h1>
         </div>
